--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.7"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.7",
+    "mongoose-sequence": "^5.0.1"
   }
 }
